--- a/htmlFile.html
+++ b/htmlFile.html
@@ -32,14 +32,14 @@
 
     <div id="text">
         My name is Sergey Mashkevich, <br />
-        I am a 17-year-old guy living in Denmark, and at this point studying at a high school named: Bagsværd Boarding School. My background country is Russia, and in this regard, I know the Russian language very well. At all, I speak three languages: Russian, Danish, and English. Even though I had studied the Deutsch language at ground school, I would not say that I would manage to speak that language along with my other known tongues. <br />
+        I am a 17-year-old IT enthusiast living in Denmark, and at this point studying at a high school named: Bagsværd Boarding School. My background country is Russia, and in this regard, I know the Russian language very well. At all, I speak three languages: Russian, Danish, and English. Even though I had studied the Deutsch language at ground school, I would not say that I would manage to speak that language along with my other known tongues. <br />
         Frequently, I spend my free time on train calisthenics, running, playing the guitar, or learn and practice different types of programming languages.
 
 
     </div>
 
 
-    <!--<script src="C:/Users/sergi/Desktop/My work/MyWebsite/app.js"></script>-->
+        
 
     
 
