--- a/htmlFile.html
+++ b/htmlFile.html
@@ -13,7 +13,7 @@
 
     <div id="backGround">
         <div id="main">
-            <a id="ss" href="file:///C:/Users/sergi/Desktop/My%20work/MyWebsite/htmlFile.html">SM</a>
+            <a id="ss" href="https://sergeymashkevich.github.io/PortfolioWeb/htmlFile.html">SM</a>
 
         </div>
 
