--- a/htmlFile.html
+++ b/htmlFile.html
@@ -33,7 +33,7 @@
     <div id="text">
         My name is Sergey Mashkevich, <br />
         I am a 17-year-old IT enthusiast living in Denmark, and at this point studying at a high school named: Bagsværd Boarding School. My background country is Russia, and in this regard, I know the Russian language very well. At all, I speak three languages: Russian, Danish, and English. Even though I had studied the German language at ground school, I would not say that I would manage to speak that language along with my other known tongues. <br />
-        Frequently, I spend my free time on train calisthenics, running, playing the guitar, or learn and practice different types of programming languages.
+        Frequently, I spend my free time practicing calisthenics, running, playing the guitar, or learn and practice different types of programming languages.
 
 
     </div>
