--- a/htmlFile2.html
+++ b/htmlFile2.html
@@ -32,7 +32,7 @@
     <br />
 
     <div id="text">
-        I am a 17-year-old IT enthusiast living in Denmark, and at this point studying at a high school named: Bagsværd Boarding School. My background country is Russia, and in this regard, I know the Russian language very well. At all, I speak three languages: Russian, Danish, and English. Even though I had studied the German language at ground school, I would not say that I would manage to speak that language along with my other known tongues. <br />
+        I am a <span id="age"></span>-year-old IT enthusiast living in Denmark, and at this point studying at a high school named: Bagsværd Boarding School. My background country is Russia, and in this regard, I know the Russian language very well. At all, I speak three languages: Russian, Danish, and English. Even though I had studied the German language at ground school, I would not say that I would manage to speak that language along with my other known tongues. <br />
         Frequently, I spend my free time practicing calisthenics, running, playing the guitar, or learn and practice different types of programming languages.
 
 
@@ -42,7 +42,7 @@
 
 
 
-       
+
 
         <div style="padding: 1%; text-align: center;">
 
@@ -58,7 +58,7 @@
     </div>
 
 
-
+    <script src="C:/Users/sergi/Desktop/Projects in github/PortfolioWeb/js.js"></script>
 
 </body>
 
