--- a/htmlFile.html
+++ b/htmlFile.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+
     <div id="backGround">
         <div id="main">
             <a id="ss" href="https://sergeymashkevich.github.io/PortfolioWeb/htmlFile.html">SM</a>
@@ -34,7 +35,7 @@
         My name is Sergey Mashkevich. <br />
         You are on my page: "about me," which I have created for a couple of reasons; one of them is because of my self-realization desire in this manner, and the other is just because it's cool to have your little platform like this. <br />
         What I do for the past: at the current time, I'm studying and using much time on my hobbies, and if the year isn't 2023 in now, then my routines aren't probably changed, where I go to the high school on the weekdays, have weekends on weekends. And in my free time, I self-developing my skills and like to learn new species of them. <br />
-        I have written more about me on another page which has a link right below here. :)
+        I have written more about me on another page which has a link right below here. :) 
 
     </div>
 
@@ -57,6 +58,7 @@
 
 
 
+<script src="C:/Users/sergi/Desktop/Projects in github/PortfolioWeb/js.js"></script>
 
 </body>
 
