--- a/htmlFile.html
+++ b/htmlFile.html
@@ -58,7 +58,7 @@
 
 
 
-<script src="C:/Users/sergi/Desktop/Projects in github/PortfolioWeb/js.js"></script>
+<script src="js.js"></script>
 
 </body>
 
