--- a/htmlFile.html
+++ b/htmlFile.html
@@ -35,7 +35,7 @@
         My name is Sergey Mashkevich. <br />
         You are on my page: "about me," which I have created for a couple of reasons; one of them is because of my self-realization desire in this manner, and the other is just because it's cool to have your little platform like this. <br />
         What I do for the past: at the current time, I'm studying and using much time on my hobbies, and if the year isn't 2023 in now, then my routines aren't probably changed, where I go to the high school on the weekdays, have weekends on weekends. And in my free time, I self-developing my skills and like to learn new species of them. <br />
-        I have written more about me on another page which has a link right below here. :) 
+        I have written more about me on another page which has a link right below here. :)
 
     </div>
 
@@ -48,17 +48,18 @@
 
             <br />
             <!--<a id="ss" href="https://www.instagram.com/ma_sergey_hkevich/" target="_blank">Instagram</a>-->
-            <a id="ss" href="htmlFile2.html" target="_self">...more about me...</a>
+            <a id="ss" href="htmlFile2.html" target="_self">...more about me...</a> <br /> <br />
             <!--<a id="ss" href="https://www.linkedin.com/in/sergeymashkevich/" target="_blank">LinkedIn</a>-->
+            <a id="ss" href="htmlFile3.html" target="_self">...Projects...</a>
             <br />
             <br />
         </div>
 
     </div>
 
+   
 
-
-<script src="js.js"></script>
+    <script src="js.js"></script>
 
 </body>
 
