--- a/htmlFile2.html
+++ b/htmlFile2.html
@@ -32,8 +32,9 @@
     <br />
 
     <div id="text">
-        I am a <span id="age"></span>-year-old IT enthusiast living in Denmark, and at this point studying at a high school named: Bagsværd Boarding School. My background country is Russia, and in this regard, I know the Russian language very well. At all, I speak three languages: Russian, Danish, and English. Even though I had studied the German language at ground school, I would not say that I would manage to speak that language along with my other known tongues. <br />
-        Frequently, I spend my free time practicing calisthenics, running, playing the guitar, or learn and practice different types of programming languages.
+        I am a <span id="age"></span>-year-old IT enthusiast living in Denmark, and previously studying at a high school named: Bagsværd Boarding School. After which I decided to pursue a military career because I considered it a more unconventional path, quite different from what I would have chosen if I had gone to university. I enlisted in the Danish Air Force, where I served from August 2023 to December of the same year. After that, I transitioned to a new phase of my service and began serving in the Danish cyber forces. <br />
+ My background country is Russia, and in this regard, I know the Russian language very well. And at all, I speak three languages: Russian, Danish, and English. <br />
+      
 
 
     </div>
