--- a/htmlFile.html
+++ b/htmlFile.html
@@ -34,7 +34,7 @@
     <div id="text">
         My name is Sergey Mashkevich. <br />
         You are on my page: "about me," which I have created for a couple of reasons; one of them is because of my self-realization desire in this manner, and the other is just because it's cool to have your little platform like this. <br />
-        What I do for the past: at the current time, I serve in the Danish Cybersecurity Forces, dedicating most of my time to learning, engaging in sports, and exploring ideas for my further personal and professional development in areas I find intriguing. <br /> <br />
+        What I have done in the past: at the current time, I serve in the Danish Cybersecurity Forces, dedicating most of my time to learning, engaging in sports, and exploring ideas for my further personal and professional development in areas I find intriguing. <br /> <br />
         I have written more about me on another page which has a link right below here. :)
 
     </div>
