--- a/htmlFile.html
+++ b/htmlFile.html
@@ -33,9 +33,7 @@
 
     <div id="text">
         My name is Sergey Mashkevich. <br />
-        You are on my page: "about me," which I have created for a couple of reasons; one of them is because of my self-realization desire in this manner, and the other is just because it's cool to have your little platform like this. <br />
-        What I recently do: at the current time, I serve in the Danish Cybersecurity Force, dedicating most of my time to learning, engaging in sports, and exploring ideas for my further personal and professional development in areas I find intriguing. <br /> <br />
-        I have written more about me on another page which has a link right below here. :)
+        Welcome to my "About Me" page! I've created this space for a couple of reasons. First, it's a way for me to explore and articulate my own self-realization. This platform allows me to reflect on my journey and share insights that might be meaningful to others. Second, it's simply exciting to have a personal space where I can showcase my interests and experiences. I hope you find it engaging and insightful as you get to know a bit more about me!
 
     </div>
 
@@ -48,9 +46,9 @@
 
             <br />
             <!--<a id="ss" href="https://www.instagram.com/ma_sergey_hkevich/" target="_blank">Instagram</a>-->
-            <a id="ss" href="htmlFile2.html" target="_self">...more about me...</a> <br /> <br />
+            <a id="ss" href="htmlFile2.html" target="_self">...more...</a> <br /> <br />
             <!--<a id="ss" href="https://www.linkedin.com/in/sergeymashkevich/" target="_blank">LinkedIn</a>-->
-            <a id="ss" href="htmlFile3.html" target="_self">...Projects...</a>
+            <a id="ss" href="htmlFile3.html" target="_self">...projects...</a>
             <br />
             <br />
         </div>
