--- a/htmlFile.html
+++ b/htmlFile.html
@@ -33,7 +33,7 @@
 
     <div id="text">
         My name is Sergey Mashkevich. <br />
-        Welcome to my "About Me" page! I've created this space for a couple of reasons. First, it's a way for me to explore and articulate my own self-realization. This platform allows me to reflect on my journey and share insights that might be meaningful to others. Second, it's simply exciting to have a personal space where I can showcase my interests and experiences. I hope you find it engaging and insightful as you get to know a bit more about me!
+        Welcome to my "About Me" page! I've created this space for a couple of reasons. First, it's a way for me to explore and articulate my own self-realization. This platform allows me to reflect on my journey and share insights. Second, it's simply exciting to have a personal space where I can showcase my interests and experiences. I hope you find it engaging and insightful as you get to know a bit more about me!
 
     </div>
 
