--- a/Main.html
+++ b/Main.html
@@ -46,9 +46,9 @@
 
             <br />
             <!--<a id="ss" href="https://www.instagram.com/ma_sergey_hkevich/" target="_blank">Instagram</a>-->
-            <a id="ss" href="htmlFile2.html" target="_self">...more...</a> <br /> <br />
+            <a id="ss" href="More.html" target="_self">...more...</a> <br /> <br />
             <!--<a id="ss" href="https://www.linkedin.com/in/sergeymashkevich/" target="_blank">LinkedIn</a>-->
-            <a id="ss" href="htmlFile3.html" target="_self">...projects...</a>
+            <a id="ss" href="Projects.html" target="_self">...projects...</a>
             <br />
             <br />
         </div>
