--- a/More.html
+++ b/More.html
@@ -48,7 +48,7 @@
 
             <br />
 
-            <a id="ss" href="htmlFile.html" target="_self">...back to the main page...</a>
+            <a id="ss" href="Main.html" target="_self">...back to the main page...</a>
             <br />
             <br />
 
