--- a/Projects.html
+++ b/Projects.html
@@ -21,7 +21,7 @@
 
         <div style="padding: 1%; text-align: center;">
 
-            <a id="ss" href="htmlFile.html" target="_self">...back to the main page...</a>
+            <a id="ss" href="Main.html" target="_self">...back to the main page...</a>
 
 
         </div>
