--- a/Projects.html
+++ b/Projects.html
@@ -14,7 +14,7 @@
 
     <div id="backGround">
         <div id="main">
-            <a id="ss" href="https://sergeymashkevich.github.io/PortfolioWeb/htmlFile.html">SM</a>
+            <a id="ss" href="https://sergeymashkevich.github.io/PortfolioWeb/Main.html">SM</a>
 
         </div>
 
